# curl-rust-issue

.github/workflows/: ci.yml
download/: Cargo.toml
download/src/: lib.rs
with-cargo-0-42-0-and-curl-sys-0-4-27/: Cargo.toml
with-cargo-0-42-0-and-curl-sys-0-4-28/: Cargo.toml
with-curl-sys-0-4-27/: Cargo.toml
with-curl-sys-0-4-27-http2-enabled/: Cargo.toml
with-curl-sys-0-4-28/: Cargo.toml
with-curl-sys-0-4-28-http2-enabled/: Cargo.toml
with-curl-sys-0-4-28-http2-enabled/src/: main.rs
